[project]
name = "light-store-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beanie>=2.1.0",
    "fastapi[standard]>=0.137.1",
    "phonenumbers>=9.0.32",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-extra-types>=2.11.1",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
]
